hphp/test/zend/good/Zend/tests/indirect_call_array_002.php.expectf

Fatal error: Invalid callable (array) in %s/indirect_call_array_002.php on line 4
